# trading-engine

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp
.github/workflows/: c-cpp.yml
backtests/: backtest_sma.cpp
data/: historical_trades.csv
include/: Event.h  OrderEvent.h  TimerEvent.h
include/backtesting/: Backtester.h  HistoricalDataLoader.h  PerformanceMetrics.h
include/config/: Config.h
include/data/: BookManager.h  MarketDataHandler.h
include/event/: Event.h  EventBus.h  MarketDataEvent.h  OrderEvent.h  TimerEvent.h
include/exchange/: ExchangeConnector.h  SimulatedExchange.h
include/logger/: Logger.h
include/market_data/: BookManager.h  OrderBook.h
include/order/: Order.h  OrderLogger.h  OrderManager.h  Position.h
include/perf/: LatencyStats.h
include/risk/: Portfolio.h
include/strategy/: SMAStrategy.h  Strategy.h  StrategyManager.h
src/backtesting/: Backtester.cpp  HistoricalDataLoader.cpp  PerformanceMetrics.cpp
src/config/: Config.cpp
src/data/: BookManager.cpp  MarketDataHandler.cpp  OrderBook.cpp
src/exchange/: SimulatedExchange.cpp
src/logger/: Logger.cpp
src/market_data/: BookManager.cpp  MarketDataHandler.cpp  OrderBook.cpp
src/order/: OrderLogger.cpp  OrderManager.cpp
src/perf/: LatencyStats.cpp
src/risk/: Portfolio.cpp
src/strategy/: SMAStrategy.cpp  StrategyManager.cpp
tests/: bookmanager_test.cpp  config_test.cpp  event_test.cpp  exchange_test.cpp  orderbook_test.cpp  perf_test.cpp  portfolio_test.cpp  strategy_test.cpp  test_all.cpp  test_bookmanager.cpp  test_engine.cpp  test_event.cpp  test_orderbook.cpp  test_ordermanager.cpp
